Added new notebooks
New notebooks include:
- Networks - shows a histogram of networks by state.
- Download_Latest_Data - automates the download of the data needed by all notebooks.
- Updated How to use

--- a/DC_Fast_Chargers_Map_USA-Animated.ipynb
+++ b/DC_Fast_Chargers_Map_USA-Animated.ipynb
@@ -10,13 +10,9 @@
     "This runs very slow so that points get added to the map and don't just flash for each date.\n",
     "\n",
     "# How to use\n",
-    "* Know how to use any kind of Jupyter Notebook.\n",
-    "* Download the data you want from here: https://afdc.energy.gov/data_download\n",
-    "* Install geopandas and plotly libraries.\n",
-    "* Open the .ipynb file in your notebook.\n",
-    "* Run notebook.\n",
-    "* Profit!\n",
-    "\n"
+    "* Run the Download_Latest_Data notebook first.\n",
+    "* Read the How to use in that notebook.\n",
+    "* Profit!"
    ]
   },
   {
@@ -45,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv ('alt_fuel_stations (May 26 2024).csv', low_memory=False)"
+    "df = pd.read_csv ('latest.csv', low_memory=False)"
    ]
   },
   {
