Added note about api_key

--- a/Download_Latest_Data.ipynb
+++ b/Download_Latest_Data.ipynb
@@ -14,7 +14,11 @@
     "* Install geopandas and plotly libraries.\n",
     "* Open the .ipynb file in your notebook.\n",
     "* Run notebooks.\n",
-    "* Profit!"
+    "* Profit!\n",
+    "\n",
+    "# NOTE \n",
+    "This is not my API key. \n",
+    "This is what is used by anyone looking at the GET request. "
    ]
   },
   {
