Add filter for Tesla chargers and update plots
* **DC_Fast_Chargers_Map_USA.ipynb**
  - Add a checkbox to switch between the main plot and the Tesla chargers plot
  - Update the scatter plot map to reflect the filtered dataframe

* **DC_Fast_Chargers_Map_USA-Animated.ipynb**
  - Add a filter to the dataframe to include only rows where the `EV Network` column contains "Tesla"
  - Update the scatter plot map to reflect the filtered dataframe

* **Networks.ipynb**
  - Add a filter to the dataframe to include only rows where the `EV Network` column contains "Tesla"
  - Update the density heatmap to reflect the filtered dataframe

--- a/DC_Fast_Chargers_Map_USA-Animated.ipynb
+++ b/DC_Fast_Chargers_Map_USA-Animated.ipynb
@@ -90,22 +90,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter_geo(expanded_df,\n",
+    "tesla_df = df[df['EV Network'] == 'Tesla']\n",
+    "\n",
+    "expanded_tesla_df = pd.DataFrame()\n",
+    "\n",
+    "for date in tesla_df['dttime'].unique():\n",
+    "    temp_df = tesla_df[tesla_df['dttime'] <= date].copy()\n",
+    "    temp_df['Frame'] = date.strftime('%Y-%m')\n",
+    "    expanded_tesla_df = pd.concat([expanded_tesla_df, temp_df], ignore_index=True)\n",
+    "\n",
+    "fig = px.scatter_geo(expanded_tesla_df,\n",
     "                     height=1000,\n",
     "                     width=1800,\n",
-    "                     lat=expanded_df.Latitude,\n",
-    "                     lon=expanded_df.Longitude,\n",
-    "                     animation_frame=expanded_df['Frame'],\n",
+    "                     lat=expanded_tesla_df.Latitude,\n",
+    "                     lon=expanded_tesla_df.Longitude,\n",
+    "                     animation_frame=expanded_tesla_df['Frame'],\n",
     "                     range_color=(0, 100),\n",
-    "                     hover_name=expanded_df[\"Station Name\"],\n",
-    "                     hover_data=[expanded_df['EV Network'], expanded_df.City, expanded_df.State],\n",
-    "                     size=expanded_df['EV DC Fast Count'],\n",
-    "                     color=expanded_df['EV DC Fast Count'],\n",
+    "                     hover_name=expanded_tesla_df[\"Station Name\"],\n",
+    "                     hover_data=[expanded_tesla_df['EV Network'], expanded_tesla_df.City, expanded_tesla_df.State],\n",
+    "                     size=expanded_tesla_df['EV DC Fast Count'],\n",
+    "                     color=expanded_tesla_df['EV DC Fast Count'],\n",
     "                     scope = \"usa\"\n",
     "                    )\n",
     "\n",
     "# Keep all markers visible for the entire animation\n",
-    "fig.update_traces(marker=dict(size=len(expanded_df)))\n",
+    "fig.update_traces(marker=dict(size=len(expanded_tesla_df)))\n",
     "fig.update_geos(\n",
     "    landcolor=\"LightGreen\",\n",
     "    showocean=True,\n",
