--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -59,7 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "fig = px.density_heatmap(df, x=\"State\", y=\"EV Network\", \n",
+    "tesla_df = df[df['EV Network'] == 'Tesla']\n",
+    "fig = px.density_heatmap(tesla_df, x=\"State\", y=\"EV Network\", \n",
     "                         nbinsx=20, \n",
     "                         nbinsy=20, \n",
     "                         text_auto=True,\n",
